--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
   "name": "dentalai",
   "version": "1.0.0",
-  "description": "",
+  "description": "Asistent AI pentru Clinica Dinți de Fier",
   "license": "ISC",
   "author": "",
   "type": "commonjs",
-  "main": "package.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "axios": "^1.10.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "twilio": "^5.7.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.0"
   }
 }
