--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "axios": "^1.10.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
-    "twilio": "^5.7.3"
+    "twilio": "^5.7.3",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.0"
